# 2024_wt_prj_bykov

./: .gitignore  Dockerfile  README.md  diagram.drawio  docker-compose.yml  requirements.txt  rocnikovy_projekt_vyhledavac_a_vlastni_spider  start.sh
Code/: .clangd  CMakeLists.txt  cmake_clang.sh
Code/Frontend/: frontend.js  index.html  log.txt  style.css
Code/UMGR/UserManager/: asgi.py  settings.py  urls.py  wsgi.py
Code/UMGR/fixtures/: allowedattributelist.yaml  keywordlist.yaml  searchuser.yaml  searchuserattributes.yaml  searchuserattributesmiddletable.yaml  searchuserkeywordlistmiddletable.yaml  user.yaml
Code/UMGR/main/: admin.py  apps.py  models.py  views.py
Code/UMGR/main/migrations/: 0001_initial.py  0002_remove_searchuser_usericonid_searchuser_usericon.py
Code/UMGR/main/static/main/: darkMode.js
Code/UMGR/main/templates/main/: about.html  base.html  index.html  login.html  one.html  result1.html  results.html  two.html  user.html  userlist.html
Code/WebCrawler/: Database.c  Database.h  Include.h  Main.c  Noreturn.c  Noreturn.h  Processing.c  Processing.h  Rules.c  Rules.h  Types.c  Types.h  Utils.c  Utils.h  seeds.txt
Code/WebServer/: Database.c  Database.h  Include.h  Main.c  Score.c  Score.h  Serialization.c  Serialization.h  Socketlib.c  Socketlib.h  System.c  System.h  Utils.c  Utils.h
DB-Schema/: DBS.drawio  README.md  Thumbs.db  newIdea.drawio
Wireframes/: WF-Desktop.kra  WF-DesktopHome.kra  WF-DesktopUser.kra  WF-Mobile.kra  WF-MobileHome.kra  WF-MobileUser.kra
